--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-8.707l-3-3a1 1 0 00-1.414 1.414L10.586 9H7a1 1 0 100 2h3.586l-1.293 1.293a1 1 0 101.414 1.414l3-3a1 1 0 000-1.414z" clip-rule="evenodd" /></svg>
                 </button>
             </form>
+            <!-- ELEMEN BARU UNTUK NAMA FILE -->
+            <p id="attachment-info" class="text-slate-400 text-sm mt-2 px-1 truncate hidden"></p>
         </div>
     </div>
 
